Cyclic payments (#16)
* backend - swagger changed files locations

* backend - added swagger files

* backend - modified main swagger file

* backend - updated transfers

* backend - added cyclic payments

* frontend - installed packages

* frontend - icons added

* frontend - added cyclic payments views

* frontend - minor refactor, spelling etc

* frontend - changes according to new AuthContext

* renamed css file

* added console error and file name changed

* fetch user when necessary

* removed unnecessary comments
